--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     <p>Hello World!</p>
+    <p>Deign Benedict S.Amador</p>
+    <p>Pasig Catholic College</p>
   </body>
 </html>
