--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <h1>This is Github</h1>
   </head>
   <body>
-    <p>Hello World!</p>
-    <p>Deign Benedict S.Amador</p>
-    <p>Pasig Catholic College</p>
+    <p>Hello World!
+        <br>Deign Benedict S.Amador
+       <br>Pasig Catholic College</p>
   </body>
 </html>
