--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <h1>This is Github</h1>
   </head>
   <body>
-    <p>Hello World!
+    <p>Hello World!</p>
         <br>Deign Benedict S.Amador
-       <br>Pasig Catholic College</p>
+       <br>Pasig Catholic College
   </body>
 </html>
